--- a/slurk-server/slurk/slurk/views/static/css/chat.css
+++ b/slurk-server/slurk/slurk/views/static/css/chat.css
@@ -226,7 +226,7 @@ time:before{
     opacity: 0.7;
 }
 
-#type-area input {
+#type-area input,textarea {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -234,11 +234,15 @@ time:before{
     font-size: 1.2em;
     z-index: 2;
 
-    padding: 0 55px;
-    width: 100%;
-    height: 60px;
+    padding: 0 1%;
+    width: 43%;
+    height: 3em;
     box-shadow: rgba(0,0,0,0.15) 0 10px 10px 0,rgba(0,0,0,0.10) 0 10px 20px 0;
 
     border: none;
     outline: none;
+}
+#type-area textarea {
+  font-family: Helvetica, Arial, sans-serif;
+  resize: vertical;
 }
